--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-postgresql = ["psycopg2-binary>=2.9.0"]
+postgresql = ["psycopg[binary]>=3.0"]
 mysql = ["pymysql>=1.0.0"]
 numpy = ["numpy>=1.20.0"]
 astronomy = ["numpy>=1.20.0", "cornish"]
@@ -43,4 +43,10 @@ Homepage = "https://github.com/demitri/dm-dbcore"
 "Source" = "https://github.com/demitri/dm-dbcore"
 
 [tool.setuptools]
-packages = ["dm_dbcore", "dm_dbcore.adapters", "dm_dbcore.mysql"]
+packages = [
+    "dm_dbcore",
+    "dm_dbcore.adapters",
+    "dm_dbcore.adapters.postgresql",
+    "dm_dbcore.adapters.sqlite",
+    "dm_dbcore.mysql",
+]
